# occupancy_grid_python

./: CMakeLists.txt  README.md  package.xml  setup.py
data/: global_costmap.pickle  local_costmap.pickle  map.pickle
scripts/: click_occ_grid.py  click_occ_grid_cell_cost.py  simple_test.py  test.py
src/occupancy_grid_python/: __init__.py  occupancy_grid_impl.py
